# sail_vscode

./: .eslintrc.js  .gitignore  .vscodeignore  README.md  make  make.cmd  package-lock.json  package.json  tsconfig.json
.github/workflows/: build.yaml
buildsystem/: Cargo.toml
buildsystem/src/: main.rs
client/: extension.ts  server_launcher.ts
server/: Cargo.toml
server/sail_parser/: Cargo.toml
server/sail_parser/src/: analyser.rs  cst.rs  lexer.rs  lib.rs  node.rs  parser.rs
server/sail_server/: Cargo.toml
server/sail_server/src/: analyser.rs  autodebug.rs  definitions.rs  file.rs  files.rs  lsp.rs  main.rs  text_document.rs
syntaxes/: sail.tmLanguage.json
