[package]
name = "sail_server"
version = "0.1.0"
authors = ["Tim Hutt <tdhutt@gmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
notify = "6.1.1"
tokio = { version = "1.16.1", features = ["macros", "rt-multi-thread", "io-std"] }
tower-lsp = "0.20.0"
itertools = "0.11.0"
walkdir = "2.3.3"
sail_parser = { path = "../sail_parser" }
# Disable the spill-stack feature because it depends on `psm` which doesn't
# seem to cross-compile to Mac successfully at the moment. It means we can't
# recurse as deep.
chumsky = { version = "1.0.0-alpha.7", default-features = false, features = ["std"] }
serde_json = "1.0.105"
